<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoutePlanActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/route_items"
        android:layout_width="499dp"
        android:layout_height="1014dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp" />

    <Button
        android:id="@+id/get_directions_btn"
        android:layout_width="189dp"
        android:layout_height="49dp"
        android:text="Get Directions"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="936dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>