<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/route_items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_animals">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/num_animals"
        android:layout_width="242dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text=""
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/route_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="209dp"
        android:layout_marginBottom="16dp"
        android:onClick="onBackClicked"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/generate_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route_items" />

    <Button
        android:id="@+id/generate_btn"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:onClick="onGenerateClicked"
        android:text="Plan"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="@+id/back" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="17dp"
        android:onClick="onClearButtonClicked"
        android:text="CLEAR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/generate_btn"
        app:layout_constraintStart_toEndOf="@+id/back" />

</androidx.constraintlayout.widget.ConstraintLayout>